--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         }
     ],
     "require": {
-        "omnipay/common": "~2.0"
+        "php-http/guzzle6-adapter": "^1.0", 
+        "omnipay/common": "~3.0"
     },
     "minimum-stability": "stable",
     "autoload": {
